# aws-cdk-with-rye

./: README.md  package-lock.json  package.json
python-cdk-app/: README.md  app.py  cdk.json  pyproject.toml
python-cdk-app/python_cdk_app/: python_cdk_app_stack.py
python-cdk-app/tests/unit/: test_python_cdk_app_stack.py
