[project]
name = "python-cdk-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yasuyuki Ageishi", email = "y4suyuki@protonmail.com" }
]
dependencies = [
    "aws-cdk-lib==2.128.0",
    "constructs>=10.0.0, <11.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "python_cdk_app:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==6.2.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_cdk_app"]
